k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ozan-jira-board
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ozan-jira-board.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ozan-jira-board
                port:
                  number: 80
